--- a/experimentsFS/exp1.html
+++ b/experimentsFS/exp1.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    /* :root { 
+     :root { 
       --primary-color: #2c3e50;
       --secondary-color: #3498db;
-    }*/
+    }
 
     .bank-interface {
       display: grid;
@@ -67,5 +67,6 @@
     }
   </script>
 </body>
+
 
 </html>
