--- a/Assessment1.html
+++ b/Assessment1.html
@@ -1,3 +1,4 @@
+<!--HTML,CSS and JS are in the same file.  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -100,3 +101,4 @@
   </script>
 </body>
 </html>
+
