--- a/experimentsFS/exp2.html
+++ b/experimentsFS/exp2.html
@@ -1,3 +1,4 @@
+<!--Internal CSS and JS is used -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -73,5 +74,6 @@
         });
     </script>
 </body>
+
 
 </html>
